@@ -1,0 +1,20 @@
+stream0=rtmp://rtmp.batc.org.uk/live/gb3hv
+label0=GB3HV
+stream1=rtmp://rtmp.batc.org.uk/live/gb3bh
+label1=GB3BH
+stream2=rtmp://rtmp.batc.org.uk/live/gb3hv
+label2=GB3HV
+stream3=rtmp://rtmp.batc.org.uk/live/gb3km
+label3=GB3KM
+stream4=rtmp://rtmp.batc.org.uk/live/gb3tv
+label4=GB3TV
+stream5=rtmp://rtmp.batc.org.uk/live/gb3tz
+label5=GB3TZ
+stream6=rtmp://rtmp.batc.org.uk/live/gb3vl
+label6=GB3VL
+stream7=rtmp://rtmp.batc.org.uk/live/gb3zz
+label7=GB3ZZ
+stream8=rtmp://rtmp.batc.org.uk/live/g4klb
+label8=G4KLB
+
+
